--- a/views/login.html
+++ b/views/login.html
@@ -36,7 +36,7 @@
 						<span class="input-group-addon">
 						<span class="glyphicon glyphicon-lock"></span>
 						</span>
-						<input type="text" class="form-control" id="password" name="password" placeholder="请输入密码" required>
+						<input type="password" class="form-control" id="password" name="password" placeholder="请输入密码" required>
 					</div>
 				</div>
 				<div class="form-group">
