--- a/views/register.html
+++ b/views/register.html
@@ -49,7 +49,7 @@
 						<span class="input-group-addon">
 						<span class="glyphicon glyphicon-lock"></span>
 						</span>
-						<input type="text" class="form-control" id="password" name="password" placeholder="请输入密码" required>
+						<input type="password" class="form-control" id="password" name="password" placeholder="请输入密码" required>
 					</div>
 				</div>
 				<div class="form-group">
@@ -57,7 +57,7 @@
 						<span class="input-group-addon">
 						<span class="glyphicon glyphicon-lock"></span>
 						</span>
-						<input type="text" class="form-control" id="password1" name="password1" placeholder="请再次输入密码" required>
+						<input type="password" class="form-control" id="password1" name="password1" placeholder="请再次输入密码" required>
 					</div>
 				</div>
 				<div class="form-group">
